added more problems